Removed jQuery namespacing and added CommonJS module support
Te plugin can still be assigned to the jQuery namespace by using the
.noConflict() methods found on each of the objects. Also updated the
filenames to reflect the changes.

--- a/tests/index.html
+++ b/tests/index.html
@@ -15,8 +15,8 @@
 	<ol id="qunit-tests"></ol>
 	<div id="qunit-fixture">test markup</div>
 	<script src="qunit/qunit.js"></script>
-	<script src="../jquery.flatten.js"></script>
-	<script src="jquery.flatten.js"></script>
+	<script src="../flatten.js"></script>
+	<script src="flatten-test.js"></script>
 </body>
 </html>
 
